--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -13,8 +13,8 @@
     <base href="">
 
     <link rel="stylesheet" href="/webjars/bootstrap/3.3.7/css/bootstrap.min.css">
-    <!--<link rel="stylesheet" href="/webjars/jquery-ui/1.12.0/jquery-ui.min.css"/>-->
-    <!--<link rel="stylesheet" href="/webjars/jquery-ui/1.12.0/jquery-ui.structure.min.css"/>-->
+    <link rel="stylesheet" href="/webjars/jquery-ui/1.12.0/jquery-ui.min.css"/>
+    <link rel="stylesheet" href="/webjars/jquery-ui/1.12.0/jquery-ui.structure.min.css"/>
     <!--<link rel="stylesheet" href="/webjars/jquery-ui-themes/1.11.4/redmond/jquery-ui.min.css"/>-->
     <link rel="stylesheet" href="/css/main.css"/>
 
