--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
     <script type="text/javascript" src="/webjars/bootstrap/3.3.7/js/bootstrap.min.js" ></script>
     <script type="text/javascript" src="/webjars/lodash/4.0.0/lodash.min.js"></script>
     <script type="text/javascript" src="/webjars/ng-file-upload/12.0.4/ng-file-upload-all.min.js"></script>
-    <script type="text/javascript" src="/js/datepicker-ru.js"></script>
+    <!--<script type="text/javascript" src="/js/datepicker-ru.js"></script>-->
 
 
 </head>
