--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -21,7 +21,9 @@
     <link rel="stylesheet" href="/css/custom.css"/>
     <link rel="stylesheet" href="/css/dropdown-submenu.css"/>
     <link rel="stylesheet" href="/css/main.css"/>
-    <!--<link rel="stylesheet" href="/css/mobile.css"/>-->
+    <link rel="stylesheet" href="/css/mobile.css"/>
+    <link rel="stylesheet" href="/css/nav.css"/>
+    <link rel="stylesheet" href="/css/sticky-footer.css"/>
 
     <script type="text/javascript" src="/webjars/angularjs/1.5.7/angular.min.js" ></script>
     <script type="text/javascript" src="/webjars/angularjs/1.5.7/angular-resource.min.js" ></script>
@@ -79,8 +81,10 @@
 
     <div class="tab-content">
         <div id="manage-home" class="tab-pane fade in active">
-            <div class="container-fluid well">
-                <h3>Испытательный полигон нового функционала.</h3>
+            <div class="container-fluid light">
+                <div class="page-header">
+                    <h3>Testing area for a new functionality</h3>
+                </div>
                 <br>
                 <dl>
                     <dt>
@@ -94,19 +98,54 @@
                 </dl>
             </div>
         </div>
+        <div id="manage-about" class="tab-pane fade">
+            <div class="container-fluid light">
+                <div class="page-header">
+                    <h3>Section under construction...</h3>
+                </div>
+                <blockquote>
+                    <p>I have always wished for my computer to be as easy to use as my telephone; my wish has come true because I can no longer figure out how to use my telephone.</p>
+                    <footer>Bjarne Stroustrup</footer>
+                </blockquote>
+                <blockquote class="blockquote-reverse">
+                    <p>Most of you are familiar with the virtues of a programmer. There are three, of course: laziness, impatience, and hubris.</p>
+                    <footer>Larry Wall</footer>
+                </blockquote>
+                <blockquote>
+                    <p>Programming is like sex. One mistake and you have to support it to the end of your life.</p>
+                    <footer>Michael Sinz</footer>
+                </blockquote>
+            </div>
+        </div>
+        <div id="manage-contact" class="tab-pane fade">
+            <div class="container-fluid light">
+                <div class="page-header">
+                    <h3>Contact information</h3>
+                </div>
+                <p class="lead">
+                    If you have a question about... you know... SOMETHING, please feel free to ask me.
+                </p>
+                <p></p>I'm online most part of a day.</p>
+                <p>Skype: <code>armored-2011</code></p>
+            </div>
+        </div>
         <div id="manage-tags" class="tab-pane fade">
             <ul class="nav nav-pills nav-stacked col-md-1">
                 <li><a href="/html/tag/input" data-target="#tag-input" data-toggle="pill">input</a></li>
                 <li><a href="/html/tag/form" data-target="#tag-form" data-toggle="pill">form</a></li>
             </ul>
             <div class="tab-content">
-                <div>Проба использования разных тегов.</div>
-                <div id="tag-input" class="tab-pane fade container well-lg">
-                    <label>
-                        Выбор цвета  <input type="color">
-                    </label>
+                <div class="container light">
+                    <h3 class="page-header">Learning of the tags behavior.</h3>
                 </div>
-                <div id="tag-form" class="tab-pane fade container well-lg">
+                <div id="tag-input" class="tab-pane fade container well">
+                    <p class="lead">Attribute &lang;type&rang;</p>
+                    <dl>
+                        <dt>color</dt>
+                        <dd><input type="color"></dd>
+                    </dl>
+                </div>
+                <div id="tag-form" class="tab-pane fade container well">
                     <label>...</label>
                 </div>
             </div>
@@ -114,6 +153,10 @@
         <div id="manage-angularj" class="tab-pane fade">
         </div>
     </div>
-
+    <footer class="footer light">
+        <div class="container">
+            <p class="text">&copy; 2016</p>
+        </div>
+    </footer>
 </body>
 </html>
