Added 'detect-device' query. Added new tags to the index page. Charged name of the root package.

--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -12,5 +12,9 @@
             <a class="custom-ref" methods="get" href="/greeting?name=some_name" title="Запросить приветствие">/greeting[?name=some_name]</a>
         </dt>
         <dd>возвращает json-приветствие со счётчиком запросов (значение параметра id)</dd>
+        <dt>
+            <a class="custom-ref" methods="get" href="/detect-device" title="Определить тип устройства">/detect-device</a>
+        </dt>
+        <dd>возвращает информацию об устройстве, с которого был отправлен запрос</dd>
     </dl>
 </div>
