--- a/src/main/resources/static/html/tags.html
+++ b/src/main/resources/static/html/tags.html
@@ -4,7 +4,7 @@
 </ul>
 <div class="tab-content">
     <div class="container light">
-        <h3 class="page-header">Learning of the tags behavior.</h3>
+        <h3 class="page-header">Learning the behavior of tags.</h3>
     </div>
     <div id="tag-input" class="tab-pane fade container well">
         <p class="lead">Attribute <code>type</code></p>
